tests/should_fail/bug/2009.stderr
error: Cannot make `"p::S::0"` transparent in `"p::C"` as it would call a less-visible item.
  --> 2009.rs:21:22
   |
21 |     pub const C: S = S(0);
   |                      ^^^^

error: aborting due to 1 previous error

